--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+<head>
+  <link rel="sytlesheet" type="text/css" href=" style.css">
+</head>
 <div id="font"><link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed" rel="stylesheet">
 </div>
 <div id="page">
