--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <head>
-  <link rel="sytlesheet" type="text/css" href=" style">
+  <link rel="sytlesheet" type="text/css" href="Style">
 </head>
 <div id="font"><link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed" rel="stylesheet">
 </div>
