--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <head>
   <link rel="stylesheet" type="text/css" href="Style">
+  <script type="text/javascript" src="jquery-1.8.3.js"></script>
+<script type="text/javascript">
+</script>
 </head>
 <div id="font"><link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed" rel="stylesheet">
 </div>
