--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <head>
   <link rel="stylesheet" type="text/css" href="Style">
-  <script type="text/javascript" src="jquery-1.8.3.js"></script>
-<script type="text/javascript">
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script type="text/javascript" href="javascript">
 </script>
 </head>
 <div id="font"><link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed" rel="stylesheet">
