--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <head>
   <link rel="stylesheet" type="text/css" href="Style">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <link rel="script" type="text/script" href="javascript">
+  <link rel="script" type="text/javascript" href="javascript">
 </head>
 <div id="font"><link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed" rel="stylesheet">
 </div>
