--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <head>
-  <link rel="stylesheet" type="text/css" href="Style">
+  <link rel="stylesheet" type="text/css" href="/css/main.css">
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <link rel="script" type="text/javascript" href="javascript">
 </head>
