--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <div id="nav">
     <ul>
       <li>Home<li>
-      <li>Pages<li>
+      <li>Blogs<li>
       <li>Contact<li></>
       </ul>
   </div>
