--- a/index.html
+++ b/index.html
@@ -1,15 +1,3 @@
-<div id="page">
-  <div id="body">
-    <h2>MY NAME IS RICARDO JOHNSON</h2>
-    <h2>AND WELCOME TO MY BLOG</h2>
-    <h2>So today was a special day for me. There was no school today and I got to watch Spongebob allll day. Since I didn't have to go to school I also got to play a bunch of Xbox. If you know, I like to play video games a lot. Since school takes up a lot of my time I usually never have the time to play video games, school sucks. All these tests and all the homework give me headaches. But there are somethings that help me deal with those headaches and it's not medicine, its Spongebob Squarepants. </h2>
-    <h2>Here's some Spongebob to ease the pain of reading this. </h4>
-    <div id="slide">
-      <img src="https://www.hdwallpapers.in/walls/spongebob_squarepants_2-wide.jpg">
-    <div id="buttons">
-      <button id="last">&lt;</button>
-      <button id="next">&gt;</button>
-    </div>  
-    </div>  
-    <h2>As you can see Spongebob is lit and if you look at it long enough you will be healed of all flaws. Ricardo Johnson Signing off Ciao. </h2>
-  </div>  
+---
+layout: default
+---
