--- a/index.html
+++ b/index.html
@@ -2,4 +2,7 @@
 layout: default
 ---
 
-<h1>WASS GOOD FAM</h1>
+<div id="homething">
+<h1>MY NAME IS RICARDO JOHSNON AND WELCOME TO MY BLOG</h1>
+<h2>Want to read some blogs go <a href="/blog">here</a></h2>
+</div>
