--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@ layout: default
 ---
 
 <div id="homething">
-<h1>MY NAME IS RICARDO JOHSNON AND WELCOME TO MY BLOG</h1>
+<h1>MY NAME IS RICARDO JOHNSON AND WELCOME TO MY BLOG</h1>
 <h2>Want to read some blogs go <a href="/blog">here</a></h2>
 </div>
