--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: default
 <div id="homething">
 <h1>MY NAME IS RICARDO JOHNSON AND WELCOME TO MY BLOG</h1>
 <h2>Want to read some of my blogs scroll down</h2>
-  {% for post in site.posts%}
+  {% for post in site.posts limit:3 %}
 		<h2>{{post.title}}</h2>
 		<h3>{{post.date}}</h3>
 		<h2>{{post.excerpt}}</h2>
