--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@ layout: default
 		<h2>{{post.title}}</h2>
 		<h3>{{post.date}}</h3>
 		<h2>{{post.excerpt}}</h2>
+		{% include post.link %}
 	{%endfor%}
 </div>	
 </div>
