--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ layout: default
 		<h2>{{post.title}}</h2>
 		<h3>{{post.date}}</h3>
 		<h2>{{post.excerpt}}</h2>
-		{% include post.link %}
+		<h3>>Wanna read some more? Click <a href="{{post.url}}">Here</a></h3>
 	{%endfor%}
 </div>	
 </div>
