--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ layout: default
 		<h2>{{post.title}}</h2>
 		<h3>{{post.date}}</h3>
 		<h2>{{post.excerpt}}</h2>
-		<h3>{{post.url}}</h3>
+		<h3<Here</h3>
 	{%endfor%}
 </div>	
 </div>
