--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ layout: default
 		<h2>{{post.title}}</h2>
 		<h2>{{post.date}}</h2>
 		<h2>{{post.excerpt}}</h2>
-		<h2><a href="{{post.url}}">Here</a></h2>
+		<h2>Wanna read more? Click<a href="{{post.url}}">Here</a></h2>
 	{%endfor%}
 </div>	
 </div>
