--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@ layout: default
 <h2>Want to read some of my blogs scroll down</h2>
 <div id="preview">  
 	{% for post in site.posts limit:3 %}
+	<div id="excerpt">	
 		<h2>{{post.title}}</h2>
 		<h2>{{post.date}}</h2>
 		<h2>{{post.excerpt}}</h2>
 		<h2>Wanna read more? Click <a href="{{post.url}}">Here</a></h2>
+		</div>
 	{%endfor%}
 </div>	
 </div>
