--- a/index.html
+++ b/index.html
@@ -14,5 +14,11 @@ layout: default
 		<h2>Wanna read more? Click <a href="{{post.url}}">Here</a></h2>
 		</div>
 	{%endfor%}
-</div>	
+	
+	<div id="spot"> 
+		<h1>Check out Kevin's Lit distrack</h1>
+		<iframe src="https://open.spotify.com/user/rlperez1207/playlist/3EfSe6iFJY5qVPOprh9kzQ" width="300" height="380" frameborder="0" allowtransparency="true"></iframe>
+	
+	</div>
+	</div>	
 </div>
