--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@ layout: default
 	
 	<div id="spot"> 
 		<h1>Check out Kevin's Lit distrack</h1>
-		<iframe src="https://open.spotify.com/embed/user/rlperez1207/playlist/3EfSe6iFJY5qVPOprh9kzQ" width="300" height="380" frameborder="0" allowtransparency="true"></iframe>
+		<iframe src="https://open.spotify.com/embed/user/rlperez1207/playlist/3EfSe6iFJY5qVPOprh9kzQ" 
+			width="300" height="380" frameborder="0" align="center" allowtransparency="true"></iframe>
 	
 	</div>
 	</div>	
